Исправил сборку через докер